# sdl3-cairo-imgui

./: .gitattributes  .gitignore  CHANGELOG.md  CMAKE_DEVELOPMENT.md  CMakeLists.txt  CMakePresets.json  INTEGRATION_SUMMARY.md  Makefile  README.rst  app-mconsole.cmd  app-mwindows.cmd  cairo-imgui-demo.c  cairo-imgui.c  cairo-imgui.h  cairo-imguitest.c  cairo_imgui.lua  compile_flags.txt  demo.lua  ffi_cairo.lua  ffi_sdl3.lua  gui_app_loop.lua  run_demo.sh  start_console_lua.bash  start_windows_lua.bash  test-asset-path.c  test_autoexit.lua  test_port.lua
.claude/: DEBIAN_START.md  SESSION_CONTEXT.md
cairo-ui--exe-distribution/: copy-dlls.sh  deplist.py
docs/markdown/: CHANGELOG.md  CMAKE_DEVELOPMENT.md  FEATURES.md  FINAL_STATUS.md  MISSING_FEATURES.md  PORT_SUMMARY.md  README_LUA_PORT.md  RUN_RESULTS.md  SUCCESS_REPORT.md
lua-tests/: demo_button_debug.lua  test_button_click.lua  test_button_simple.lua  test_button_space.lua  test_checkbox_space.lua  test_editbox.lua  test_editbox_baseline.lua  test_editbox_keyrepeat.lua  test_editbox_modifier_debug.lua  test_editbox_overflow.lua  test_editbox_q_key.lua  test_editbox_scroll.lua  test_editbox_shift_digit.lua  test_keyboard_events.lua  test_keyboard_struct.lua  test_lua_parity.lua  test_quit_key.lua  test_radiobuttons_lr_nav.lua  test_radiobuttons_nav.lua  test_sdl_cairo_minimal.lua  test_sdl_minimal.lua  test_slider_drag.lua  test_slider_drag_outside.lua  test_slider_interactive.lua  test_slider_no_enter_space.lua  test_tab_focus_cycle.lua
